# Conan-CMake_Template

./: BuildSolution.bat  CMakeLists.txt  README.md  conanfile.txt  main.cpp
shaders/: frag_shader.frag  vert_shader.vert
src/: Arrow.cpp  Arrow.h  AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  DataSet.cpp  DataSet.h  DebugTools.cpp  DebugTools.h  DeveloperTools.cpp  DeveloperTools.h  DrawableBase.cpp  DrawableBase.h  DrawableIncludes.h  Heatmap.cpp  Heatmap.h  HeatmapNew.cpp  HeatmapNew.h  Histogram2D.cpp  Histogram2D.h  Line.cpp  Line.h  Plane.cpp  Plane.h  ProgramInstance.cpp  ProgramInstance.h  Renderer.cpp  Renderer.h  SDL_Instance.cpp  SDL_Instance.h  Trajectory.cpp  Trajectory.h  VisualHelper.cpp  VisualHelper.h  glContext.cpp  glContext.h  glProgram.cpp  glProgram.h
